--- a/app/core/templates/core/reports/startronreport.html
+++ b/app/core/templates/core/reports/startronreport.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
-<h1>All Upcoming Runs for Startron Blends</h1>
+    <div class='text-center'>
+        <h1>All Upcoming Runs for Startron Blends</h1>
+    </div>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered">
             <thead class="thead-dark">
