--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -52,13 +52,18 @@
             {% endfor %}
         </table>
     </div>
-    <div id="page-links">
-        {% if current_page.has_previous %}
-            <a href="/core/lotnumrecords/?page={{ current_page.previous_page_number }}">Previous Page</a>
-        {% endif %}
-        {% if current_page.has_next %}
-            <a href="/core/lotnumrecords/?page={{ current_page.next_page_number }}">Next Page</a>
-        {% endif %}
+    <div class='text-center'>
+        <div id="page-links">
+            {% if current_page.has_previous %}
+                <a href="/core/lotnumrecords/?page={{ current_page.previous_page_number }}">Previous Page</a>
+            {% endif %}
+            {% if current_page.has_next %}
+                <a href="/core/lotnumrecords/?page={{ current_page.next_page_number }}">Next Page</a>
+            {% endif %}
+        </div>
+        <div>
+            Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
+        </div>
     </div>
 
 {% endblock content %}
