--- a/app/core/templates/core/reports/lotnumsreport.html
+++ b/app/core/templates/core/reports/lotnumsreport.html
@@ -3,43 +3,46 @@
 
 {% block content %}
     {% if no_lots_found %}
-        <h1> No lot numbers found. Please try another report.</h1>
+        <div class='text-center'>
+            <h1> No lot numbers found. Please try another report.</h1>
+        </div>
     {% else %}
-        <h1>Lot Numbers for {{ blend_info.part_number }} {{ blend_info.desc }}</h1>
-            <div>
-                <a href="/core/lotnumform">
-                    <button class="btn btn-secondary">New Lot Number</button>
-                </a>
-                <br/><br/> 
-            </div>
-            <div class="table-responsive-sm">
-                <table class="table text-left table-bordered">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">Blend</th>
-                            <th scope="col">Description</th>
-                            <th scope="col">Lot_Number</th>
-                            <th scope="col">Quantity</th>
-                            <th scope="col">Date</th>
-                        </tr>
-                    </thead>
-                    {% for item in lot_nums %}
-                        <tr>
-                            <td>{{ item.part_number }}</td>
-                            <td>{{ item.description }}</td>
-                            <td>{{ item.lot_number }}</td>
-                            <td>{{ item.quantity }}</td>
-                            <td>{{ item.date }}</td>
-                            {% if user.is_staff %}
-                                <td>
-                                    <a href="/core/blendsheet/{{ item.lot_number }}">
-                                        <button class="btn btn-secondary">Blend Sheet</button>
-                                    </a>
-                                </td>
-                            {% endif %}
-                        </tr>
-                    {% endfor %}
-                </table>
-            </div>
+        <div class='text-center'>
+            <h1>Lot Numbers for {{ blend_info.part_number }} {{ blend_info.desc }}</h1>
+            <br/><br/> 
+        </div>
+        <div>
+            
+        </div>
+        <div class="table-responsive-sm">
+            <table class="table text-left table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Blend</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Lot_Number</th>
+                        <th scope="col">Quantity</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Blend Sheet</th>
+                    </tr>
+                </thead>
+                {% for item in lot_nums %}
+                    <tr>
+                        <td>{{ item.part_number }}</td>
+                        <td>{{ item.description }}</td>
+                        <td>{{ item.lot_number }}</td>
+                        <td>{{ item.quantity }}</td>
+                        <td>{{ item.date_created|date:"M d, Y" }}</td>
+                        {% if user.is_staff %}
+                            <td>
+                                <a href="/core/blendsheet/{{ item.lot_number }}">
+                                    <button class="btn btn-secondary">Blend Sheet</button>
+                                </a>
+                            </td>
+                        {% endif %}
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
     {% endif %}
 {% endblock content %}
