--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/forkliftchecklist">Forklift Checklist</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/core/chemshortages">Chem Shortages</a>
+                                </li>
                                 {% if user.is_staff %}
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -106,7 +109,6 @@
                 <div class="col-md-12">
                 {% block content %}{% endblock %}
                 </div>
-
             </div>
         </main>
     </body>
