Reduce queryset size for ItemLookup page.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -129,4 +129,5 @@
             $("#jblineissue").attr("href", "/core/issuesheets/JB LINE/"+tomorrowString);            
         });
     </script>
+    {% block belowdeckscripts %}{% endblock %}
 </html>
