--- a/app/prodverse/templates/prodverse/lookupitem.html
+++ b/app/prodverse/templates/prodverse/lookupitem.html
@@ -20,65 +20,79 @@
         <h2>Enter item number:</h2>
         <input type="text" id="id_part_number"></input>
         <h3 style="margin-top:12px; margin-bottom:-2px; font-size:18px;">Description:</h4>
-        <p id="noreallywtfisit">.</p>
+        <div id="noreallywtfisit">Enter a part number above</div>
+        <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
         
         <h3 style="margin-top:12px; margin-bottom:-2px; font-size:18px;">Qty On Hand:</h4>
-        <p id="howfuckinmuch">.</p>
+        <div id="howfuckinmuch">Enter a part number above</div>
+        <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
     </div>
-    <!-- Item Code Dropdown Script must be inline for Django template tags to function -->
-    <script>
-        try {
-            $( function() {
-                const availableItemCodes = [
-                    {% for item in CiItem_data %}
-                        "{{item.itemcode}}",
-                    {% endfor %}
-                ];
-                
-                $("#id_part_number").autocomplete({ // Sets up a dropdown for the part number field 
-                    minLength: 2,
-                    source: function (request, response) {
-                        let results = $.ui.autocomplete.filter(availableItemCodes, request.term);
-                        response(results.slice(0,10));
-                    },
-                    change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
-                        var item = $('#id_part_number').val().toUpperCase() // Make sure the part_number field is uppercase
-                        $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
-                            function(data) {
-                                console.log("change")
-                                console.log(data)
-                                $('#noreallywtfisit').text(data.reqItemDesc); // Update desc value
-                                $('#howfuckinmuch').text(parseFloat(data.reqQty));
-                                return;
-                        })
-                            .fail(function() { // err handle
-                                console.log("Part Number field is blank or not found");
-                                $('#noreallywtfisit').text("uhhh");
-                                $('#howfuckinmuch').text("Part Number field is blank or not found");
-                            })
-                    },
-                    select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
-                        var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
-                        $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
-                            function(data) {
-                                console.log("select")
-                                console.log(data)
-                                $('#noreallywtfisit').text(data.reqItemDesc); // Update desc value
-                                $('#howfuckinmuch').text(parseFloat(data.reqQty));
-                                return;
-                        })
-                            .fail(function() { // err handle
-                                console.log("Part Number field is blank or not found");
-                                $('#noreallywtfisit').text("uhhh");
-                                $('#howfuckinmuch').text("Part Number field is blank or not found");
-                            })
-                    },
-            
-                });
-            });
-        } catch (pnError) {
-            console.log(pnError)
-        }
-    </script>
   {% endblock content %}
 <!-- End Body -->
+{% block belowdeckscripts %}
+<script>
+    try {
+        $( function() {
+            const availableItemCodes = [
+                {% for item in CiItem_data %}
+                    "{{item.itemcode}}",
+                {% endfor %}
+            ];
+            let $partNumber = $("#id_part_number")
+            $partNumber.autocomplete({ // Sets up a dropdown for the part number field 
+                minLength: 2,
+                source: function (request, response) {
+                    let results = $.ui.autocomplete.filter(availableItemCodes, request.term);
+                    response(results.slice(0,10));
+                },
+                change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
+                    $('#noreallywtfisit').text("");
+                    $('#howfuckinmuch').text("");
+                    $('.animation').toggle();
+                    var item = $partNumber.val().toUpperCase() // Make sure the part_number field is uppercase
+                    $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
+                        function(data) {
+                            console.log("change")
+                            console.log(data)
+                            $('#noreallywtfisit').text(data.reqItemDesc); // Update desc value
+                            $('#howfuckinmuch').text(parseFloat(data.reqQty));
+                            return;
+                    })
+                        .fail(function() { // err handle
+                            console.log("Part Number field is blank or not found");
+                            $('#noreallywtfisit').text("uhhh");
+                            $('#howfuckinmuch').text("Part Number field is blank or not found");
+                        })
+                        .always(function() {
+                            $('.animation').toggle();
+                        })
+                },
+                select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
+                    $('#noreallywtfisit').text("");
+                    $('#howfuckinmuch').text("");
+                    $('.animation').toggle();
+                    var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
+                    $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
+                        function(data) {
+                            console.log("select")
+                            console.log(data)
+                            $('#noreallywtfisit').text(data.reqItemDesc); // Update desc value
+                            $('#howfuckinmuch').text(parseFloat(data.reqQty));
+                            return;
+                        })
+                        .fail(function() { // err handle
+                            console.log("Part Number field is blank or not found");
+                            $('#noreallywtfisit').text("uhhh");
+                            $('#howfuckinmuch').text("Part Number field is blank or not found");
+                        })
+                        .always(function() {
+                            $('.animation').toggle();
+                        })
+                },
+            });
+        });
+    } catch (pnError) {
+        console.log(pnError)
+    }
+</script>
+{% endblock %}
